added manifold